hphp/test/zend/good/Zend/tests/foreach_002.php
<?php

error_reporting(E_ALL);

foreach (($a = array('a' => array('a' => &$a))) as $a) {
	var_dump($a);
}

?>